feat: add update and delete combo
